feat: changes made in  development.yml file[]

--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -87,7 +87,7 @@ jobs:
 
   release_macos:
     runs-on: macos-latest
-    needs: release_win
+    # needs: release_win
     
     steps:
       - name: Checkout Repository
