--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: Update updater endpoint in tauri.conf.json file
         run: |
           $content = Get-Content src-tauri/tauri.conf.json -Raw
-          $newContent = $content -replace '"{{UPDATER_URL}}/updater/{{target}}/{{arch}}/{{current_version}}"', '"${{ secrets.UPDATER_ENDPOINT }}/updater/{{target}}/{{arch}}/{{current_version}}"'
+          $newContent = $content -replace '"https://{{UPDATER_URL}}/updater/{{target}}/{{arch}}/{{current_version}}"', '"https://${{ secrets.UPDATER_ENDPOINT }}/updater/{{target}}/{{arch}}/{{current_version}}"'
           Set-Content -Path src-tauri/tauri.conf.json -Value $newContent
         shell: pwsh
 
@@ -110,7 +110,7 @@ jobs:
       - name: Update updater endpoint in tauri.conf.json file
         run: |
           content=$(<src-tauri/tauri.conf.json)
-          newContent=$(echo "$content" | sed 's|"{{UPDATER_URL}}/updater/{{target}}/{{arch}}/{{current_version}}"|"${{ secrets.UPDATER_ENDPOINT }}/updater/{{target}}/{{arch}}/{{current_version}}"|g')
+          newContent=$(echo "$content" | sed 's|"https://{{UPDATER_URL}}/updater/{{target}}/{{arch}}/{{current_version}}"|"https://${{ secrets.UPDATER_ENDPOINT }}/updater/{{target}}/{{arch}}/{{current_version}}"|g')
           echo "$newContent" > src-tauri/tauri.conf.json
         shell: bash
 
