--- a/package.json
+++ b/package.json
@@ -110,27 +110,23 @@
         {
           "assets": [
             {
-              "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/msi/Sparrow_1.1.0_x64.dmg",
+              "path": "/Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/dmg/*.dmg",
               "label": "Sparrow.dmg"
             },
             {
-              "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/nsis/*.exe",
+              "path": "msi_files/*.exe",
               "label": "Sparrow.exe"
             },
             {
-              "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/msi/*.msi",
+              "path": "msi_files/*.msi",
               "label": "Sparrow.msi"
             },
             {
-              "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/msi/Sparrow_1.1.0_x64_en-US.msi.zip",
+              "path": "msi_files/*.zip",
               "label": "Sparrow_1.1.0_x64_en-US.msi.zip"
             },
             {
-              "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/nsis/Sparrow_1.1.0_x64-setup.nsis.zip",
-              "label": "Sparrow_1.1.0_x64-setup.nsis.zip"
-            },
-            {
-              "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/msi/Sparrow.app.tar.gz",
+              "path": "/Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/macos/Sparrow.app.tar.gz",
               "label": "Sparrow.app.tar.gz"
             }
           ]
