feat: test build v0.0.0 do not merge it[]

--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -1,7 +1,8 @@
 name: Development release
 
 on:
-  push:
+  pull_request:
+    types: [opened, edited]
     branches:
       - development
   workflow_dispatch:
