--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
-# These owners will be the default owners for everything in
-# the repo. The below owners will be requested for
-# review when someone opens a pull request.
-*       @LordNayan @gc-codes
+# Review for all pull requests
+*      @gc-codes
 
+# Github configs PR Reviwer
+.github/*    @gc-codes
