--- a/package.json
+++ b/package.json
@@ -66,14 +66,14 @@
     "@tsconfig/svelte": "^5.0.0",
     "@types/js-beautify": "^1.14.3",
     "@types/mixpanel-browser": "^2.49.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "eslint": "^8.54.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.0",
-    "node-sass": "^9.0.0",
     "prettier": "3.0.2",
-    "sass": "^1.66.0",
+    "sass": "^1.72.0",
     "semantic-release": "^23.0.0",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.6",
