fix: rest explorer refactor
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "isolatedModules": true,
     "paths": {
       "$lib/*": ["./src/lib/*"],
+      "$features/*": ["./src/features/*"]
     }
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
