--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "@sparrow/typography/*": ["./src/lib/components/*"],
       "@sparrow/forms/*": ["./src/lib/components/*"],
 
-      "@rest-explorer/*": ["./src/features/rest-explorer/*"]
+      "@rest-explorer/*": ["./src/features/rest-explorer/*"],
+      "@common/*": ["./src/features/@common/*"]
     }
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
