fix: rest explorer directory path [#737]
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
       "@sparrow/typography/*": ["./src/lib/components/*"],
       "@sparrow/forms/*": ["./src/lib/components/*"],
 
-      "@rest-explorer/*": ["./src/features/rest-explorer/*"],
+      "@rest-explorer/*": ["./src/features/@rest-explorer/*"],
       "@common/*": ["./src/features/@common/*"]
     }
   },
