--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "@common/*": ["./src/packages/@common/*"],
       "@teams/*": ["./src/packages/@teams/*"],
       "@workspaces/*": ["./src/packages/@workspaces/*"],
-      "@environments/*": ["./src/packages/@environments/*"]
+      "@environments/*": ["./src/packages/@environments/*"],
+      "@support/*": ["./src/packages/@support/*"]
     }
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
