--- a/package.json
+++ b/package.json
@@ -113,15 +113,15 @@
           "assets": [
             {
               "path": "/Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/dmg/*.dmg",
-              "label": "Sparrow.dmg"
+              "label": "Sparrow_2.0.0.dmg"
             },
             {
               "path": "msi_files/*.exe",
-              "label": "Sparrow.exe"
+              "label": "Sparrow_2.0.0.exe"
             },
             {
               "path": "msi_files/*.msi",
-              "label": "Sparrow.msi"
+              "label": "Sparrow_2.0.0.msi"
             },
             {
               "path": "msi_files/*.zip",
