fix: Resolved  comments &  Updater Function Remaining to move in ViewModel [123]

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ VITE_SPARROW_SUPPORT_EMAIL="support@example.dev"
 VITE_AUTH_URL="http://localhost:1421"
 VITE_SPARROW_GITHUB="https://github.com/sparrowapp-dev"
 VITE_SPARROW_DOWNLOAD_LINK="https://github.com/sparrowapp-dev/sparrow-app/releases"
+VITE_RELEASE_NOTES_PAT_TOKEN=""
+VITE_RELEASE_NOTES_API="https://api.github.com/repos/sparrowapp-dev/sparrow-app/releases"
