--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -15,6 +15,8 @@ env:
     VITE_AUTH_URL: ${{ secrets.VITE_AUTH_URL_DEV }}
     VITE_SPARROW_GITHUB: ${{ secrets.VITE_SPARROW_GITHUB }}
     VITE_SPARROW_DOWNLOAD_LINK: ${{ secrets.VITE_SPARROW_DOWNLOAD_LINK }}
+    VITE_RELEASE_NOTES_PAT_TOKEN: ${{ secrets.VITE_RELEASE_NOTES_PAT_TOKEN }}
+    VITE_RELEASE_NOTES_API: ${{ secrets.VITE_RELEASE_NOTES_API }}
     ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 
 jobs:
