--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ VITE_SPARROW_GITHUB="https://github.com/sparrowapp-dev"
 VITE_SPARROW_DOWNLOAD_LINK="https://github.com/sparrowapp-dev/sparrow-app/releases"
 VITE_RELEASE_NOTES_PAT_TOKEN=""
 VITE_RELEASE_NOTES_API="https://api.github.com/repos/sparrowapp-dev/sparrow-app/releases"
+VITE_AZURE_CDN_URL=
