Build: Updated the new ENV VITE_AZURE_CDN_URL for dev & prod as well

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,6 +17,7 @@ env:
   VITE_SPARROW_DOWNLOAD_LINK: ${{ vars.VITE_SPARROW_DOWNLOAD_LINK }}
   VITE_RELEASE_NOTES_PAT_TOKEN: ${{ secrets.VITE_RELEASE_NOTES_PAT_TOKEN }}
   VITE_RELEASE_NOTES_API: ${{ vars.VITE_RELEASE_NOTES_API }}
+  VITE_AZURE_CDN_URL: ${{ vars.VITE_AZURE_CDN_URL }}
   ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 
 jobs:
