feat: add theme to the chat assistant [#1241]
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "codemirror": "^6.0.1",
     "codemirror-json-schema": "^0.6.1",
     "font-awesome": "^4.7.0",
+    "highlight.js": "^11.10.0",
     "js-beautify": "^1.15.1",
     "js-yaml": "^4.1.0",
     "jsoneditor": "^9.10.3",
+    "marked": "^13.0.2",
     "mixpanel-browser": "^2.48.1",
     "monaco-editor": "^0.44.0",
     "path": "^0.12.7",
@@ -50,7 +52,6 @@
     "svelte-jsoneditor": "^0.18.9",
     "svelte-motion": "^0.11.5",
     "svelte-navigator": "^3.2.2",
-    "svelte-sortablejs": "^0.2.0",
     "svelte-split-pane": "^0.1.2",
     "svelte-splitpanes": "^0.8.0",
     "svelte-toasts": "^1.1.2",
