--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -133,69 +133,69 @@ jobs:
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
       
-      - name: file content
-        run: cat /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/macos/*.sig
+      # - name: file content
+      #   run: cat /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/macos/*.sig
       
-      - name: Install AWS CLI
-        run: |
-          curl "https://awscli.amazonaws.com/AWSCLIV2.pkg" -o "AWSCLIV2.pkg"
-          sudo installer -pkg AWSCLIV2.pkg -target /
-          aws --version
-      - name: Upload & downlode File to S3
-        run: |
-          aws s3 cp /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/macos s3://sparrow-release-assests-dev --recursive --exclude "*" --include "*.gz"
+      # - name: Install AWS CLI
+      #   run: |
+      #     curl "https://awscli.amazonaws.com/AWSCLIV2.pkg" -o "AWSCLIV2.pkg"
+      #     sudo installer -pkg AWSCLIV2.pkg -target /
+      #     aws --version
+      # - name: Upload & downlode File to S3
+      #   run: |
+      #     aws s3 cp /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/macos s3://sparrow-release-assests-dev --recursive --exclude "*" --include "*.gz"
           
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Download MSI files from S3 bucket
-        run: |
-          mkdir msi_files
-          aws s3 cp s3://sparrow-release-assests-dev/ msi_files/ --recursive --exclude "*" --include "*.msi"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      # - name: Download MSI files from S3 bucket
+      #   run: |
+      #     mkdir msi_files
+      #     aws s3 cp s3://sparrow-release-assests-dev/ msi_files/ --recursive --exclude "*" --include "*.msi"
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Install App Center CLI
-        run: |
-          npm install -g appcenter-cli@latest
+      # - name: Install App Center CLI
+      #   run: |
+      #     npm install -g appcenter-cli@latest
 
-      - name: Get PR Branch Name
-        id: pr_branch
-        run: echo "::set-output name=branch::$(echo ${{ github.head_ref }})"
+      # - name: Get PR Branch Name
+      #   id: pr_branch
+      #   run: echo "::set-output name=branch::$(echo ${{ github.head_ref }})"
 
-      - name: Upload to App Center
-        run: |
-          appcenter login --token ${{ secrets.APPCENTER_API_TOKEN }}
-          branch_name="${{ steps.pr_branch.outputs.branch }}"
-          echo "Branch Name: $branch_name"
-          appcenter distribute release -f /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/dmg/*.dmg -g Collaborators --app techdome/Sparrow-1 --build-version test-${branch_name} --build-number ${{ github.run_number }}
-          appcenter distribute release -f msi_files/*.msi -g Collaborators --app techdome/Sparrow --build-version test-${branch_name} --build-number ${{ github.run_number }}
-      - name: status check and upload
-        uses: neonidian/teams-notify-build-status@v3
-        if: always()
-        with:
-          webhookUrl: |
-            ${{ secrets.TEAMS_INCOMING_WEBHOOK_URL }}
-          message: |
-            🚀 **Build Status Update** 🚀
-            The workflow (sparrow-app for **Mac**) has completed with status: **${{ job.status }}**.
-            👉 Check it out latest release here [AppCenter](https://appcenter.ms/users/techdome/apps/Sparrow-mac)!
-          titleBackgroundColor: ${{ job.status }}
-        env:
-          SHOULD_DISPLAY_VIEW_COMMIT_BUTTON: true
+      # - name: Upload to App Center
+      #   run: |
+      #     appcenter login --token ${{ secrets.APPCENTER_API_TOKEN }}
+      #     branch_name="${{ steps.pr_branch.outputs.branch }}"
+      #     echo "Branch Name: $branch_name"
+      #     appcenter distribute release -f /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/dmg/*.dmg -g Collaborators --app techdome/Sparrow-1 --build-version test-${branch_name} --build-number ${{ github.run_number }}
+      #     appcenter distribute release -f msi_files/*.msi -g Collaborators --app techdome/Sparrow --build-version test-${branch_name} --build-number ${{ github.run_number }}
+      # - name: status check and upload
+      #   uses: neonidian/teams-notify-build-status@v3
+      #   if: always()
+      #   with:
+      #     webhookUrl: |
+      #       ${{ secrets.TEAMS_INCOMING_WEBHOOK_URL }}
+      #     message: |
+      #       🚀 **Build Status Update** 🚀
+      #       The workflow (sparrow-app for **Mac**) has completed with status: **${{ job.status }}**.
+      #       👉 Check it out latest release here [AppCenter](https://appcenter.ms/users/techdome/apps/Sparrow-mac)!
+      #     titleBackgroundColor: ${{ job.status }}
+      #   env:
+      #     SHOULD_DISPLAY_VIEW_COMMIT_BUTTON: true
 
-      - name: status check and upload
-        uses: neonidian/teams-notify-build-status@v3
-        if: always()
-        with:
-          webhookUrl: |
-            ${{ secrets.TEAMS_INCOMING_WEBHOOK_URL }}
-          message: |
-            🚀 **Build Status Update** 🚀
-            The workflow (sparrow-app for windows) has completed with status: **${{ job.status }}**.
-            👉 Check it out latest release here [AppCenter](https://appcenter.ms/users/techdome/apps/Sparrow)!
-          titleBackgroundColor: ${{ job.status }}
-        env:
-          SHOULD_DISPLAY_VIEW_COMMIT_BUTTON: true
+      # - name: status check and upload
+      #   uses: neonidian/teams-notify-build-status@v3
+      #   if: always()
+      #   with:
+      #     webhookUrl: |
+      #       ${{ secrets.TEAMS_INCOMING_WEBHOOK_URL }}
+      #     message: |
+      #       🚀 **Build Status Update** 🚀
+      #       The workflow (sparrow-app for windows) has completed with status: **${{ job.status }}**.
+      #       👉 Check it out latest release here [AppCenter](https://appcenter.ms/users/techdome/apps/Sparrow)!
+      #     titleBackgroundColor: ${{ job.status }}
+      #   env:
+      #     SHOULD_DISPLAY_VIEW_COMMIT_BUTTON: true
