--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,8 +19,10 @@ serde_json = "1.0"
 json = "0.12.4"
 regex = "1.4.6"
 dotenv = "0.15"
+anyhow = "1.0"
 nfd = "0.0.4"
 flate2 = "1.0"
+futures-util = "0.3"
 brotli = "3.3.0"
 reqwest = { version = "0.11", features = [
     "blocking",
@@ -28,8 +30,14 @@ reqwest = { version = "0.11", features = [
     "multipart",
     "stream",
 ] }
+http = "0.2"
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.6", features = ["full"] }
+tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
+native-tls = "0.2"
+tungstenite = "0.20.1"
+url = "2.2"
+futures = "0.3"
 tauri-plugin-os = "2.0.0-beta.0"
 tauri-plugin-updater = "2.0.0-beta"
 tauri-plugin-process = "2.0.0-beta"
