--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "path": "^0.12.7",
     "rxdb": "^14.17.1",
     "rxjs": "^7.8.1",
+    "socket.io-client": "^4.7.5",
     "svelte-agnostic-draggable": "^0.2.0",
     "svelte-file-dropzone": "^2.0.2",
     "svelte-jsoneditor": "^0.18.9",
