--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,8 @@ reqwest = { version = "0.11", features = [
     "stream",
 ] }
 http = "0.2"
+hyper = { version = "0.14", features = ["client", "http1", "http2"] }
+hyper-tls = "0.5"
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.6", features = ["full"] }
 tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
