fix: added env details []

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ VITE_SPARROW_DOWNLOAD_LINK="https://github.com/sparrowapp-dev/sparrow-app/releas
 VITE_RELEASE_NOTES_PAT_TOKEN=""
 VITE_RELEASE_NOTES_API="https://api.github.com/repos/sparrowapp-dev/sparrow-app/releases"
 VITE_AZURE_CDN_URL=
+VITE_AZURE_INSIGHTS_CONNECTION_STRING=
