--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,8 @@ env:
   VITE_RELEASE_NOTES_API: ${{ vars.VITE_RELEASE_NOTES_API }}
   VITE_AZURE_CDN_URL: ${{ vars.VITE_AZURE_CDN_URL }}
   VITE_AZURE_INSIGHTS_CONNECTION_STRING: ${{ vars.VITE_AZURE_INSIGHTS_CONNECTION_STRING }}
+  VITE_CANNY_API: ${{ vars.VITE_CANNY_API }}
+  VITE_CANNY_URL: ${{ vars.VITE_CANNY_URL }}
   ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 
 jobs:
