--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tauri-apps/plugin-shell": "^2.0.0-beta.1",
     "@tauri-apps/plugin-updater": "^2.0.0-beta.0",
     "@tauri-apps/plugin-window": "^2.0.0-alpha.1",
+    "@xyflow/svelte": "^0.1.17",
     "axios": "^1.5.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^5.3.1",
