--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -179,8 +179,8 @@ jobs:
           appcenter login --token ${{ secrets.APPCENTER_API_TOKEN }}
           branch_name="${{ steps.pr_branch.outputs.branch }}"
           echo "Branch Name: $branch_name"
-          appcenter distribute release -f /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/dmg/*.dmg -g Collaborators --app techdome/Sparrow-1 --build-version test-${branch_name} --build-number ${{ github.run_number }}
-          appcenter distribute release -f msi_files/*.msi -g Collaborators --app techdome/Sparrow --build-version test-${branch_name} --build-number ${{ github.run_number }}
+          appcenter distribute release -f /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/dmg/*.dmg -g Collaborators --app techdome/Sparrow-1 --build-version branch-development --build-number ${{ github.run_number }}
+          appcenter distribute release -f msi_files/*.msi -g Collaborators --app techdome/Sparrow --build-version branch-development --build-number ${{ github.run_number }}
       - name: status check and upload
         uses: neonidian/teams-notify-build-status@v3
         if: always()
