feat: added base url for web socket []

--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -21,6 +21,7 @@ env:
   VITE_AZURE_INSIGHTS_CONNECTION_STRING: ${{ vars.VITE_AZURE_INSIGHTS_CONNECTION_STRING }}
   VITE_CANNY_API: ${{ vars.VITE_CANNY_API }}
   VITE_CANNY_URL: ${{ vars.VITE_CANNY_URL }}
+  VITE_BASE_URL: $${{ vars.VITE_BASE_URL }}
   ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 
 jobs:
