--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ VITE_RELEASE_NOTES_PAT_TOKEN=""
 VITE_RELEASE_NOTES_API="https://api.github.com/repos/sparrowapp-dev/sparrow-app/releases"
 VITE_AZURE_CDN_URL=
 VITE_AZURE_INSIGHTS_CONNECTION_STRING=
+VITE_BASE_URL=
