feat: added env in workflow []

--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -22,6 +22,7 @@ env:
   VITE_CANNY_API: ${{ vars.VITE_CANNY_API }}
   VITE_CANNY_URL: ${{ vars.VITE_CANNY_URL }}
   VITE_BASE_URL: ${{ vars.VITE_BASE_URL }}
+  VITE_SPARROW_LINKEDIN: ${{ vars.VITE_SPARROW_LINKEDIN }}
   ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 
 jobs:
