--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ VITE_RELEASE_NOTES_API="https://api.github.com/repos/sparrowapp-dev/sparrow-app/
 VITE_AZURE_CDN_URL=
 VITE_AZURE_INSIGHTS_CONNECTION_STRING=
 VITE_BASE_URL=
+VITE_SPARROW_LINKEDIN=
