--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "socket.io-client": "^4.7.5",
     "svelte-agnostic-draggable": "^0.2.0",
     "svelte-file-dropzone": "^2.0.2",
+    "svelte-inview": "^4.0.2",
     "svelte-jsoneditor": "^0.18.9",
     "svelte-motion": "^0.11.5",
     "svelte-navigator": "^3.2.2",
@@ -89,9 +90,9 @@
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.6",
     "svelte-loading-spinners": "^0.3.4",
-    "svelte-preprocess": "^5.0.4",
+    "svelte-preprocess": "^6.0.2",
     "tslib": "^2.6.0",
-    "typescript": "^5.0.2",
+    "typescript": "^5.6.2",
     "vite": "^4.4.4"
   },
   "lint-staged": {
