--- a/packages/@workspaces/tsconfig.json
+++ b/packages/@workspaces/tsconfig.json
@@ -1,23 +1,30 @@
 {
-	"extends": "@tsconfig/svelte/tsconfig.json",
-	"compilerOptions": {
-	  "target": "ESNext",
-	  "useDefineForClassFields": true,
-	  "module": "ESNext",
-	  /**
-	   * Typecheck JS in `.svelte` and `.js` files by default.
-	   * Disable checkJs if you'd like to use dynamic types in JS.
-	   * Note that setting allowJs false does not prevent the use
-	   * of JS in `.svelte` files.
-	   */
-	  "allowJs": true,
-	  "checkJs": true,
-	  "isolatedModules": true,
-	  "paths": {
-		"$lib/*": ["./src/lib/*"],
-	  }
-	},
-	"include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
-	"references": [{ "path": "./tsconfig.node.json" }]
-  }
-  
+  "extends": "@tsconfig/svelte/tsconfig.json",
+  "compilerOptions": {
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    /**
+     * Typecheck JS in `.svelte` and `.js` files by default.
+     * Disable checkJs if you'd like to use dynamic types in JS.
+     * Note that setting allowJs false does not prevent the use
+     * of JS in `.svelte` files.
+     */
+    "allowJs": true,
+    "checkJs": true,
+    "isolatedModules": true,
+    "paths": {
+      "@library/*": ["../packages/@library/src/*"],
+      "@common/*": ["../packages/@common/src/*"],
+      "$lib/*": ["../packages/@deprecate/src/*"]
+    }
+  },
+  "include": [
+    "src/**/*.d.ts",
+    "src/**/*.ts",
+    "src/**/*.js",
+    "src/**/*.svelte",
+    "../packages/@library/src/**/*.ts"
+  ],
+  "references": [{ "path": "./tsconfig.node.json" }]
+}
