--- a/packages/@workspaces/tsconfig.json
+++ b/packages/@workspaces/tsconfig.json
@@ -19,12 +19,6 @@
       "$lib/*": ["../packages/@deprecate/src/*"]
     }
   },
-  "include": [
-    "src/**/*.d.ts",
-    "src/**/*.ts",
-    "src/**/*.js",
-    "src/**/*.svelte",
-    "../packages/@library/src/**/*.ts"
-  ],
+  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
