--- a/packages/@deprecate/tsconfig.json
+++ b/packages/@deprecate/tsconfig.json
@@ -15,6 +15,12 @@
     "isolatedModules": true,
     "paths": {}
   },
-  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
+  "include": [
+    "src/**/*.d.ts",
+    "src/**/*.ts",
+    "src/**/*.js",
+    "src/**/*.svelte",
+    "../../apps/@desktop/src/store/auth.store.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
